--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^9.6.8",
+    "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-glidejs": "^1.0.8",
     "react-glider": "^2.2.1",
+    "react-multi-carousel": "^2.8.3",
     "react-router-dom": "^5.1.0",
     "react-scripts": "4.0.3",
-    "react-slick": "^0.28.1",
     "react-toastify": "^8.0.3",
     "web-vitals": "^1.1.2"
   },
